--- a/source_sass/_base.scss
+++ b/source_sass/_base.scss
@@ -1,1 +1,158 @@
 // Add any custom Sass & CSS here
+
+body{
+	font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+	font-size: 20px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
+	line-height: 26.4px;
+}
+
+/*NAVBAR*/
+.navbar-fixed-top{
+	height: 100px;
+	opacity: 0.9;
+}
+
+.navbar-header a{
+	font-size: 22px;
+	padding-top: 40px;
+}
+
+.navbar-right li{
+	padding-top: 24px;
+	padding-right: 40px;
+}
+
+/*LIST.HTML*/
+
+#welllist{
+	margin-top: 120px;
+	margin-left: 200px;
+	width: 70%;
+}
+
+.movie{
+	font-size: 22px;
+}
+
+.input{
+	width: 330px;
+	height: 40px;
+	display: inline-block;
+	font-size: 20px;
+}
+
+#sortorder{
+	margin-left: 400px;
+	margin-top: 11px;
+}
+.searchResults{
+	background-color: #252526;
+	width: 1100px;
+	margin-left: 75px;
+}
+
+#movieimg{
+	padding-top: 20px;
+	padding-left: 20px;
+	padding-bottom: 12px;
+	height: 30%;
+	width: 40%;
+}
+
+.overall{
+	border-bottom: 5px solid white;
+}
+
+.left{
+	display: inline-block;
+}
+
+.right{
+	display: inline-block;
+	color: white;
+
+}
+
+/*details*/
+#welldet{
+	width: 79%;
+	margin-top: 130px;
+	margin-left: 118px;
+	background-color: #252526;
+}
+
+#btngallery{
+	display: inline-block;
+}
+
+#previous, #next{
+	margin-top: 200px;
+	position: absolute;
+}
+
+#previous{
+	margin-left:30px;
+}
+
+#next{
+	margin-left: 1150px;
+}
+
+.heading{
+	float: right;
+	margin-right: 110px;
+	color: white;
+}
+
+.rightdet{
+	color: white;
+	padding-top: 20px;
+}
+
+#detimg{
+	width:70%;
+	height: 75%;
+	border-width: 5px 5px 5px 5px;
+	border-style: solid;
+	border-color: white;
+}
+
+/*GALLERY*/
+.gallery{
+	background-color: #252526;
+	width: 1251px;
+	column-count:3;
+	margin-top: 20px;
+
+}
+
+#movielist{
+	padding-left: 45px;
+	padding-top: 10px;
+	padding-right: 5px;
+	padding-bottom: 5px;
+	height: 500px;
+	display: inline-block;
+}
+
+#gallimg{
+	border-width: 5px 5px 5px 5px;
+	border-style: solid;
+	border-color: white;
+}
+
+#btngallery{
+	margin-top: 120px;
+	position: relative;
+
+}
+
+.grp{
+	display: inline-block;
+	padding-left: 10px;
+	margin-bottom: 10px;
+	position: relative;
+}
